# lablens

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample_input/: academic_medical_center_style_lab_summary.txt  messy_academic_medical_center_extracted_text.txt  regional_hospital_style_lab_summary.txt  synthetic_lab_summary.txt
data/sample_output/: normalized_results.json  physician_summary.html  physician_summary.md  review_queue.csv
docs/: data_model.md  database.md  phase1_parsing.md  phase2_database.md  phase3_physician_reports.md  roadmap.md
sql/: example_queries.sql  schema.sql  schema_postgres.sql
src/lablens/: academic_medical_center_parser.py  analytics.py  cli.py  database.py  demo.py  normalizer.py  parser.py  regional_hospital_parser.py  report.py  sources.py
tests/: test_academic_medical_center_parser.py  test_cli.py  test_database_phase2.py  test_messy_academic_medical_center_fixture.py  test_normalizer.py  test_parser.py  test_phase3_reports.py  test_regional_hospital_parser.py  test_sources.py
