[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lablens"
version = "0.1.0"
description = "PDF-first clinical lab normalization and physician summary generator using synthetic data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
pdf = ["pdfplumber>=0.11"]

[project.scripts]
lablens-demo = "lablens.demo:main"
lablens = "lablens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
